# rr

./: README.md  pyproject.toml
robotic_researcher/: known_scientists.py  main.py  robotics.py  ui.py
robotic_researcher/robotics/: __init__.py  exceptions.py  robotics.py  selenium_utils.py  speaker.py
